[project]
name = "py-grid"
version = "0.0.1"
authors = [
  { name="Sam", email="samuelayodeji2478@gmail.com" },
]
description = "A simple python package for generating, managing and visualizing grids"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/olascoWorks/py-grid"
Issues = "https://github.com/olascoWorks/py-grid/issues"